manifests/httproute-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-vastaya-traffic-split
  namespace: vastaya
spec:
  parentRefs:
    - name: tasks-vastaya-svc
      group: core
      kind: Service
      namespace: vastaya
      port: 80
  rules:
#     - matches:
#       - headers:
#         - name: "User-Agent"
#           type: RegularExpression
#           value: ".*Firefox.*"
#         - name: Accept-Language
#           type: RegularExpression
#           value: "en-US.*" 
    - backendRefs:
        - name: projects-vastaya-svc
          port: 80
          weight: 1
        - name: projects-canary-vastaya-svc
          port: 80
          weight: 0
      filters:
      - type: RequestMirror
        requestMirror:
          backendRef:
            name: projects-canary-vastaya-svc
            port: 80
